--- a/frontend/cadastrar-produto.html
+++ b/frontend/cadastrar-produto.html
@@ -29,17 +29,17 @@
         <section class="mt-4">
           <!-- Nome -->
           <div class="mt-3 flex-container">
-            <i class="bi bi-plus-circle icon" style="flex-grow: 1"></i>
+            <i class="fa fa-circle-plus icon" style="flex-grow: 1"></i>
             <input type="text" id="nome" name="nome"  placeholder="Nome" class="input" style="flex-grow: 9" required>
           </div>
           <!-- Descrição -->
           <div class="mt-3 flex-container">
-            <i class="bi bi-card-text icon" style="flex-grow: 1"></i>
+            <i class="fa fa-align-justify icon" style="flex-grow: 1"></i>
             <input type="text" id="descricao" name="descricao"  placeholder="Descrição" class="input" style="flex-grow: 9" required> 
           </div>
           <!-- Preço -->
           <div class="mt-3 flex-container">
-            <i class="bi bi-coin icon" style="flex-grow: 1"></i>
+            <i class="fa fa-brazilian-real-sign icon" style="flex-grow: 1"></i>
             <input type="text" id="preco" name="preco"  placeholder="Preço" class="input" style="flex-grow: 9" required> 
           </div>
         </section>
