--- a/frontend/cadastro-vendedor.html
+++ b/frontend/cadastro-vendedor.html
@@ -7,11 +7,10 @@
     <title>Cadastro Vendedor</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- Link css -->
     <link rel="stylesheet" href="./css/cadastro.css">
     <!-- Link js -->
-    <script src="./js/bootstrap.bundle.min.js" defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
     <!--Link icons-->
     <script src="https://kit.fontawesome.com/232b6de587.js" crossorigin="anonymous"></script>
   </head>
@@ -68,12 +67,6 @@
           <div class="mt-3 flex-container">
             <i class="fas fa-lock icon" style="flex-grow: 1"></i>
             <input type="password" id="senha" name="senha" placeholder="Senha"
-             class="input" style="flex-grow: 9" required>
-          </div>
-          <!-- Confirmar senha -->
-          <div class="mt-3 flex-container">
-            <i class="fas fa-lock icon" style="flex-grow: 1"></i>
-            <input type="password" id="confirmar-senha" name="senha" placeholder="Confirmar Senha"
              class="input" style="flex-grow: 9" required>
           </div>
         </section>
