--- a/frontend/login.html
+++ b/frontend/login.html
@@ -21,7 +21,7 @@
         <input type="text" name="usuario" id="usuario" class="input" placeholder="Usuário" required>
       </div>
       <div class="input-container">
-        <input type="text" name="senha" id="senha" class="input" placeholder="Senha" required> 
+        <input type="password" name="senha" id="senha" class="input" placeholder="Senha" required> 
       </div>
       <button type="submit"> Login </button>
       <div class="input-container-h5 mt-3">
