Melhorias nas telas

--- a/frontend/carrinho-compras.html
+++ b/frontend/carrinho-compras.html
@@ -45,7 +45,7 @@
 						<td>6.00</td>
                         <td>10</td>
                         <td>
-                            <a href="#removeCartModal" class="removeCart" data-toggle="modal"><i class="material-icons" title="Adicionar ao carrinho">remove_shopping_cart</i></a>
+                            <a href="#removeCartModal" class="removeCart" data-toggle="modal"><i class="material-icons" title="Remover do carrinho">remove_shopping_cart</i></a>
 
                         </td>
                     </tr>
