--- a/frontend/gerenciar-produtos.html
+++ b/frontend/gerenciar-produtos.html
@@ -145,20 +145,19 @@
 					<div class="modal-body">			
 						<div class="form-group">
 							<label>Nome</label>
-							<input type="text" class="form-control" required>
+							<input type="text" class="form-control" value="Heineken" required>
 						</div>
 						<div class="form-group">
 							<label>Descrição</label>
-							
-                            <textarea class="form-control" required></textarea>
+                            <textarea class="form-control" required>Cerveja puro malte 300ml</textarea>
 						</div>
 						<div class="form-group">
 							<label>Preço</label>
-							<input type="number" class="form-control" required>
+							<input type="number" class="form-control" value="6.00" required>
 						</div>
 						<div class="form-group">
 							<label>Estoque</label>
-							<input type="number" class="form-control" required>
+							<input type="number" class="form-control" value="10" required>
 						</div>					
 					</div>
 					<div class="modal-footer">
