Implementações e melhorias no frontend

--- a/frontend/painel-cliente.html
+++ b/frontend/painel-cliente.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/painel.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
   <title> Painel Cliente </title>
 
 </head>
@@ -21,18 +22,16 @@
         <button onclick="document.location='login.html'"> Sair Conta </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='lista-produtos.html'"> Ver Produtos </button>
+        <button onclick="document.location='listagem-produtos.html'"> Ver Produtos </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='carrinho.html'"> Ver Carrinho de Compras </button>
+        <button onclick="document.location='carrinho-compras.html'"> Ver Carrinho de Compras </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='pedidos-cliente.html'"> Ver Pedidos </button>
+        <button onclick="document.location='pedidos.html'"> Ver Pedidos </button>
       </div>   
     </div>
   </div>
-  
-  <script src="js/bootstrap.bundle.min.js"> </script>
 
 </body>
 </html>
