--- a/frontend/painel-vendedor.html
+++ b/frontend/painel-vendedor.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/painel.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
   <title> Painel Vendedor </title>
 
 </head>
@@ -21,7 +22,7 @@
         <button onclick="document.location='login.html'"> Sair Conta </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='lista-produtos.html'"> Ver Produtos </button>
+        <button onclick="document.location='gerenciar-produtos.html'"> Gerenciar Produtos </button>
       </div>
       <div class="input-container mt-4">
         <button onclick="document.location='historico-vendas-site.html'"> Ver Histórico de Vendas do Site </button>
@@ -31,8 +32,6 @@
       </div>   
     </div>
   </div>
-  
-  <script src="js/bootstrap.bundle.min.js"> </script>
 
 </body>
 </html>
