--- a/frontend/gerenciar-produtos.html
+++ b/frontend/gerenciar-produtos.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Lista de Produtos</title>
+	<title>Gerenciar Produtos</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,6 +14,29 @@
 </head>
   
   <body>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+		
+		  <!-- BRAND -->
+		  <div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#alignment-example" aria-expanded="false">
+			  <span class="sr-only">Toggle navigation</span>
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#" onclick="document.location='painel-vendedor.html'">Conta Vendedor</a>
+		  </div>
+			
+			
+			<!-- Links -->
+			<ul class="nav navbar-nav">
+			  <li><a href="#" class="sair" type="submit" onclick="document.location='historico-vendas-site.html'">Ver Histórico de Vendas</a></li>
+			  <li><a href="#" class="sair" type="submit" onclick="document.location='cadastro-vendedor.html'">Cadastrar Vendedor</a></li>
+			  <li><a href="#" class="sair" type="submit" onclick="document.location='login.html'">Sair</a></li>
+			</ul>            
+		</div>
+	  </nav>
     <div class="container">
         <div class="table-wrapper">
             <div class="table-title">
